fix: community members title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2643,7 +2643,9 @@ body.screenshot {
   }
 
   .modGallery ul.gallery.seperated h3 {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 }
 
